fixed dark mode images

--- a/static/css/dark/scss/create-post.scss
+++ b/static/css/dark/scss/create-post.scss
@@ -1,4 +1,4 @@
-$url: '../../../img/nick/darkthiccborder.png';
+$url: '../../../img/darkthiccborder.png';
 $accentColor:rgb(121, 39, 18);
 $accentDark: rgb(77, 22, 8);
 $textColor: white;
