--- a/static/css/dark/scss/global.scss
+++ b/static/css/dark/scss/global.scss
@@ -1,6 +1,6 @@
 $postBg: #faebd7;
-$url: '../../../img/nick/darkthiccborder.png';
-$bgimage: '../../../img/nick/patterndark.png';
+$url: '../../../img/darkthiccborder.png';
+$bgimage: '../../../img/patterndark.png';
 $font: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 $accentColor:rgb(121, 39, 18);
 $accentDark: rgb(77, 22, 8);
